--- a/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
@@ -1,14 +1,14 @@
 {% twig_js name="guests_payable" %}
-<div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter une catégorie d'invité</button></div>
+<div class="col-md-3 col-sm-3 col-xs-12"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter une catégorie d'invité</button></div>
 {% if moduleGuestType == 1 %}
-    <div class="col-md-3"><button data-toggle="modal" data-target=".getInscrptionLink">Générer l'URL d'inscription</button></div>
+    <div class="col-md-3 col-sm-3 col-xs-12"><button data-toggle="modal" data-target=".getInscrptionLink">Générer l'URL d'inscription</button></div>
 {% endif %}
 {% if payable %}
     {% if paymentmeans is not empty %}
-        <div class="col-md-3"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
+        <div class="col-md-3 col-sm-3 col-xs-12"><button data-toggle="modal" data-target=".addPaymentMeansModal">Ajouter un mode de paiement</button></div>
     {% endif %}    
 {% endif %}
-<div class="col-md-2 pull-right" id="checkbox_payable">                  
+<div class="col-md-2 pull-right " id="checkbox_payable">                  
     <form id="paying-checkbox" action="">
 		<input id="payable-{{module_id}}" onclick="updatePayable({{module_id}})" type="checkbox" {% if payable %} checked {%endif%}>Evenement payant
 	</form>
