--- a/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
@@ -9,5 +9,6 @@
 </div>
 <div class="info_dte info_color">
 	<img src="/images/event/info_dte_budget.png" /> 
-	<p> BALANCE DU BUDGET </br> <span>36</span> </p>
+	<p class="benef" data-placement="top" data-original-title="(Apport personnel + Apports) - Dépenses"> BÉNÉFICES PRÉVUS </br> <span>36</span> </p>
 </div>
+<script>$('.benef').tooltip();</script>
