--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -43,11 +43,12 @@
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
     <script> //getEvent({{event_id}}); </script>
     <script> getModule({{module_id}}); </script>
-   	<script>
-		(function() {
-			[].slice.call( document.querySelectorAll( '.tabs' ) ).forEach( function( el ) {
-				new CBPFWTabs( el );
-			});
-		})();
-	</script>
+
+ //   	<script>
+	// 	(function() {
+	// 		[].slice.call( document.querySelectorAll( '.tabs' ) ).forEach( function( el ) {
+	// 			new CBPFWTabs( el );
+	// 		});
+	// 	})();
+	// </script>
 {% endblock %}
