--- a/src/PlanIt/BudgetBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/layout.html.twig
@@ -11,7 +11,8 @@
  {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
   {% javascripts '@PlanItBudgetBundle/Resources/views/templates/tab_content.html.twig'
-  '@PlanItBudgetBundle/Resources/views/templates/tab.html.twig' filter="twig_js, ?yui_js" %}
+  '@PlanItBudgetBundle/Resources/views/templates/tab.html.twig'
+  '@PlanItBudgetBundle/Resources/views/templates/infos.html.twig' filter="twig_js, ?yui_js" %}
     <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
     {% javascripts 
