--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -4,6 +4,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
                 </div>
                 <div class="modal-body">
@@ -17,6 +18,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
                 </div>
                 <div class="modal-body">
