--- a/src/PlanIt/BudgetBundle/Resources/views/templates/tab_content.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/templates/tab_content.html.twig
@@ -128,6 +128,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+            <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
             <h4 class="modal-title" id="myModalLabel_deleteInflow"></h4>
             </div>
             <div class="modal-body row">
