--- a/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
@@ -18,6 +18,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+            <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
             <h4 class="modal-title" id="myModalLabel">Lien du formulaire d'inscritption</h4>
             </div>
             <div class="modal-body">
