--- a/src/PlanIt/PlaceBundle/Resources/views/Place/form.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Place/form.html.twig
@@ -2,6 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+            <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
             <h4 class="modal-title" id="myModalLabel">Ajouter un lieu</h4>
             </div>
             <div class="modal-body">
