--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -24,6 +24,7 @@
 		        <div class="modal-dialog">
 		            <div class="modal-content">
 		                <div class="modal-header">
+		                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
 		                <h4 class="modal-title" id="myModalLabel">Ajouter un événement</h4>
 		                </div>
 		                <div class="modal-body">
