--- a/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
@@ -7,8 +7,20 @@
 	<img src="/images/event/info_dte_invite.png" /> 
 	<p> NOMBRE D'INSCRITS </br> <span>{{nb_guests}}</span> </p>
 </div>
-<div class="info_dte info_color">
-	<img src="/images/event/info_dte_budget.png" /> 
-	<p class="benef" data-placement="top" data-original-title="(Apport personnel + Apports) - Dépenses"> BÉNÉFICES PRÉVUS </br> <span>36</span> </p>
+<div class="info_dte info_color" id="balance">
+	{% if balance == "Empty" %}
+		<p class="benef" data-placement="top" data-original-title="Ajoutez un module BUDGET"> BÉNÉFICES PRÉVUS </br> <span> Non calculé</span> </p>
+	{% else %}
+		<p class="benef" data-placement="top" data-original-title="(Apport personnel + Apports) - Dépenses"> BÉNÉFICES PRÉVUS </br> <span>{{ balance }} €</span> </p>
+	{% endif %}
+		
 </div>
-<script>$('.benef').tooltip();</script>
+<script>
+	$('.benef').tooltip();
+	 if( parseInt($("#balance p span").text()) > 0 ){
+		$("#balance").addClass("positif");
+	}
+	else if ( parseInt($("#balance p span").text()) < 0 ){
+		$("#balance").addClass("negatif");
+	}
+</script>
