reglage de bugs

--- a/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
@@ -149,7 +149,7 @@ header {
 				}
 			}
 
-			.sent-true .picto {
+			.sent-1 .picto {
 				background-position-x : -54px;
 			}
 			.delete .picto {
